# solana-arbitrage-bot

./: .gitignore  Cargo.toml  README.md  memes.txt
apps/bot-runner/: Cargo.toml
apps/bot-runner/src/: main.rs
apps/bot-runner/src/commands/: mod.rs  quote.rs  swap.rs
apps/bot-runner/src/handlers/: mod.rs  quote.rs  swap.rs
apps/cli-runner/: Cargo.toml
apps/cli-runner/src/: main.rs
apps/cli-runner/src/clients/: jupiter_http.rs  mock.rs  mod.rs
apps/cli-runner/src/commands/: quote.rs  quote_matrix.rs
apps/cli-runner/src/handlers/: mod.rs  quote.rs  quote_matrix.rs
crates/arbitrage/: Cargo.toml
crates/arbitrage/src/: lib.rs  prelude.rs
crates/arbitrage/src/core/: eval_2hop.rs  eval_3hop.rs  mod.rs  types.rs
crates/arbitrage/src/middleware/: mod.rs  throttle_retry.rs
crates/arbitrage/src/ports/: mod.rs  quote.rs  resolver.rs
crates/arbitrage/src/test/: eval_spes.rs  smoke.rs
crates/arbitrage/tests/: sanity.rs  smoke.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: jupiter_http.rs  lib.rs  types.rs
crates/client/src/jupiter/: arbitrage.rs  mod.rs  quote.rs  quote_chain.rs  swap.rs  token_list.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/token-registry/: Cargo.toml
crates/token-registry/src/: api.rs  cache.rs  jupiter_v1.rs  jupiter_v2.rs  lib.rs  local_resolver.rs  registry.rs  types.rs
crates/token-registry/tests/: registry_smoke.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  lib.rs  printer.rs  token.rs  wallet.rs
docs/: day1-log.md  day2-log.md
