[workspace]
members = [
    "apps/bot-runner",
    "apps/cli-runner", 
    "crates/client",
    "crates/arbitrage",
    "crates/executor",
    "crates/utils"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
solana-client = "2.0.13"
solana-program = "2.0.13"
solana-sdk = "2.0.13"
base64 = "0.21"
bincode = "1.3"
once_cell = "1.19"
comfy-table = "7.1.0"
