[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
token-registry = { path = "../token-registry" }

[dev-dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread","time"] }
anyhow = "1"
