[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
solana-sdk     = { workspace = true }
comfy-table = { workspace = true }
once_cell = { workspace = true }